Quick fix to bottom margins for project cards on smaller screen. Fixes from last commit still need to be completed when you get back.

--- a/css/main.css
+++ b/css/main.css
@@ -469,6 +469,10 @@ h2 {
 		width: 65vw;
 		height: 40vw;
 	}
+
+	.card:not(:last-child) {
+		margin-bottom: 3rem;
+	}
 }
 
 .card--1 {
